src/tests/snapshots/niri__tests__window_opening__check_target_size@fsT-dwP0.25-wfsAU-t.snap
---
source: src/tests/window_opening.rs
description: "want fullscreen: AU\nconfig:\nwindow-rule {\n    open-fullscreen true\n    default-column-width { proportion 0.25; }\n    default-column-display \"tabbed\"\n}\n\nlayout {\n    tab-indicator {\n        place-within-column\n    }\n}"
expression: snapshot
---
initial configure:
size: 1280 × 720, bounds: 1239 × 688, states: [Fullscreen]

post-map configures:
size: 291 × 688, bounds: 1239 × 688, states: []
size: 291 × 688, bounds: 1239 × 688, states: [Activated]
